--- a/templates/orders-to-csv.html.twig
+++ b/templates/orders-to-csv.html.twig
@@ -17,7 +17,7 @@
             </p>
         </form>
         <div id="logout-wrap">
-            <p>Log out <a id="logout"></a><p>
+            <p><a id="logout" href="/api/logout">Log out</a><p>
         </div>
     </div>
 {% endblock %}
