--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -14,15 +14,27 @@
         <h2>Registration</h2>
         <form id="register-form">
             <p>
+                <input type="text" id="error-prompt" placeholder="Invalid username or password" disabled><i
+                    class="validation"><span></span><span></span></i>
+            </p>
+            <p>
                 <input type="text" id="username" name="username" placeholder="Username" required><i
                     class="validation"><span></span><span></span></i>
             </p>
             <p>
-                <input type="email" id="password" name="email" placeholder="Password" required><i
+                <input type="text" id="firstname" name="username" placeholder="First Name" required><i
                     class="validation"><span></span><span></span></i>
             </p>
             <p>
-                <input type="email" id="password-again" name="email" placeholder="Re-type Password" required><i
+                <input type="text" id="lastname" name="username" placeholder="Last Name" required><i
+                    class="validation"><span></span><span></span></i>
+            </p>
+            <p>
+                <input type="password" id="password" name="password" placeholder="Password" required><i
+                    class="validation"><span></span><span></span></i>
+            </p>
+            <p>
+                <input type="password" id="re-password" name="re-password" placeholder="Re-type Password" required><i
                     class="validation"><span></span><span></span></i>
             </p>
             <p>
