--- a/public/assets/register/register.css
+++ b/public/assets/register/register.css
@@ -61,7 +61,7 @@ input {
 }
 
 input[type="text"],
-input[type="email"] {
+input[type="password"] {
     width: 100%;
     padding: 0 0 0 10px;
     margin: 0;
@@ -78,31 +78,31 @@ input[type="email"] {
 }
 
 input[type="text"]:focus,
-input[type="email"]:focus {
+input[type="password"]:focus {
     border-color: #3ca9e2;
 }
 
 input[type="text"]:focus:invalid,
-input[type="email"]:focus:invalid {
+input[type="password"]:focus:invalid {
     color: #cc1e2b;
     border-color: #cc1e2b;
 }
 
 input[type="text"]:valid~.validation,
-input[type="email"]:valid~.validation {
+input[type="password"]:valid~.validation {
     display: block;
     border-color: #0C0;
 }
 
 input[type="text"]:valid~.validation span,
-input[type="email"]:valid~.validation span {
+input[type="password"]:valid~.validation span {
     background: #0C0;
     position: absolute;
     border-radius: 6px;
 }
 
 input[type="text"]:valid~.validation span:first-child,
-input[type="email"]:valid~.validation span:first-child {
+input[type="password"]:valid~.validation span:first-child {
     top: 30px;
     left: 14px;
     width: 20px;
@@ -112,7 +112,7 @@ input[type="email"]:valid~.validation span:first-child {
 }
 
 input[type="text"]:valid~.validation span:last-child,
-input[type="email"]:valid~.validation span:last-child {
+input[type="password"]:valid~.validation span:last-child {
     top: 35px;
     left: 8px;
     width: 11px;
@@ -161,4 +161,11 @@ input[type="submit"]:hover {
     width: 100%;
     padding: 10px 0;
     border-radius: 0 0 4px 4px;
+}
+
+#error-prompt {
+    background-color: rgb(255, 187, 187);
+    text-align: center;
+    border-width: 0;
+    display: none;
 }
